[package]
name = "invaders"
version = "0.1.0"
authors = ["HyperEntangledQubit <25336193+HyperEntangledQubit@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.17.5"
rusty_audio = "1.1.4"
rusty_time = "0.11.0"
glob = "0.3.1"
io = "0.0.2"
terminal = "0.2.1"
